--- a/platformio.ini
+++ b/platformio.ini
@@ -10,5 +10,5 @@ build_flags =
     -DARDUINO_USB_MODE=1
     -DESP32C3
 upload_protocol = esptool
-upload_port = COM4
+upload_port = /dev/cu.usbmodem14101
 upload_speed = 460800
